# pcp-server

./: .gitignore  README.md  pyproject.toml  server.py  setup.sh
docs/: development.md
docs/context/: current_state.md
pcp/: CHANGELOG.md  context.yaml
pcp/RFCs/: RFC-000-template.md
pcp/prompts/: merge-assistant.md  summarize-context.md
pcp/schema/: envelop.vo.1.json
