[project]
name = "pcp-server"
version = "0.1.0"
description = "A self-developing Project Context Protocol (PCP) MCP server"
authors = [
    {name = "George Loudon", email = "your.email@example.com"}
]
dependencies = [
    "mcp[cli]",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
